--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,7 @@
 @import 'ngx-toastr/toastr';
 body{
    /* background-image: url('./assets/fondo.jpg'); */
-   background: linear-gradient(rgba(29,93,236,0.5), rgba(29,93,236,0.5)), url('./assets/fondo.jpg');
+   /* background: linear-gradient(rgba(29,93,236,0.5), rgba(29,93,236,0.5)), url('./assets/fondo.jpg'); */
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
