--- a/src/app/components/proyectos/create-proyectos/create-proyectos.component.html
+++ b/src/app/components/proyectos/create-proyectos/create-proyectos.component.html
@@ -67,7 +67,7 @@
                         <div class="card-body row-cols-4">
                             <span class="card-title col-6 font-weight-bold">{{selected.nombre}}</span>
                             <span class="card-text col-4">{{selected.precio |currency}}</span>
-                            <span>Quantity: <input type="number" formControlName="quantity_{{selected.id}}" [(ngModel)]="selected.quantity"
+                            <span>Cantidad: <input type="number" formControlName="quantity_{{selected.id}}" [(ngModel)]="selected.quantity"
                                     class="col-2"></span>
                             <button (click)="removeMaterial(selected)"
                                 class="btn btn-danger btn-sm float-right">Remove</button>
@@ -89,7 +89,7 @@
                     <div class="card" *ngIf="trabajadores.length > 0">
 
                         <div class="card-header text-center text-info font-weight-bold">
-                            Trabajadores disponibles
+                            Trabajadores disponibles <span class="badge badge-pill badge-warning">{{trabajadores.length}}</span>
                         </div>
 
                         <ul class="list-group list-group-item" *ngFor="let trabajador of trabajadores">
@@ -106,7 +106,7 @@
                 <div class="col-6" *ngIf="selectedTrabajadores.length > 0">
                     <div class="card">
                         <div class="card-header text-center text-info font-weight-bold">
-                            Trabajadores seleccionados
+                            Trabajadores seleccionados <span class="badge badge-pill badge-success">{{selectedTrabajadores.length}}</span>
                         </div>
                         <div class="list-group" *ngFor="let selectedTrabajador of selectedTrabajadores; let i = index">
                             <div class="list-group-item font-weight-bold">
