--- a/src/app/components/clientes/list-clientes/list-clientes.component.html
+++ b/src/app/components/clientes/list-clientes/list-clientes.component.html
@@ -1,9 +1,9 @@
-<div class="container mt-4">
+<div class="container mt-5">
   <div *ngIf='displayc == true' class="card" >
     <div class="card-body">
       <span class="hr">Lista de Clientes</span>
       <button
-        class="btn btn-primary btn-lg float-right"
+        class="btn btn-primary btn-lg float-end"
         routerLink="/create-clientes"
       >
         Agregar
