--- a/src/app/components/materiales/list-materiales/list-materiales.component.html
+++ b/src/app/components/materiales/list-materiales/list-materiales.component.html
@@ -1,9 +1,10 @@
-<div class="container mt-4">
-  <div class="card">
+<div class="container ">
+  <div class="card pt-5">
     <div class="card-body">
-      <span class="hr">Lista de Materiales</span>
+      <figure class="text-center">
+        <div class="mt-3"> <h1 class="display-6 text-primary">Lista de Materiales</h1></div></figure>
       <button
-        class="btn btn-primary btn-lg float-right"
+        class="btn btn-primary btn-lg float-end"
         routerLink="/create-materiales"
       >
         Agregar
@@ -17,6 +18,7 @@
             <th>Nombre</th>
             <th>Descripcion</th>
             <th>Precio</th>
+            <th>Accion</th>
           </tr>
         </thead>
         <tbody>
