--- a/src/app/components/recuperar-password/recuperar-password.component.html
+++ b/src/app/components/recuperar-password/recuperar-password.component.html
@@ -1,18 +1,19 @@
 <div class="wrapper">
-    <div class="body">
+    <div *ngIf="!loading" class="body">
         <img class="logo" src="../../../assets/login.png" alt="login">
         <h1>Recuperar</h1>
-        <form>
+        <form [formGroup]="recuperarUsuario" (ngSubmit)="recuperar()">
         <div class="form-floating mb-3">
-            <input type="email" class="form-control"  placeholder="name@example.com">
-            <label >Email address</label>
+            <input type="email" class="form-control" formControlName="correo" placeholder="name@example.com">
+            <label >Email</label>
           </div>
          
         <div class="d-grid gap-2 mb-3">
-            <button class="btn btn-primary btn-lg">Recuperar</button>
+            <button type="submit" class="btn btn-primary btn-lg">Recuperar</button>
         </div>
         <a routerLink="/login">Volver</a>
 
     </form>
     </div>
+    <app-spinner *ngIf="loading"></app-spinner>
 </div>
