--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,75 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+
+
+
+<nav id="sidebarMenu" class="collapse d-lg-block sidebar collapse bg-white">
+    <div class="position-sticky">
+      <div class="list-group list-group-flush mx-3 mt-4">
+        <a
+        routerLink="/dasboard"
+          class="list-group-item list-group-item-action py-2 ripple"
+          aria-current="true"
+        >
+          <i class="fas fa-tachometer-alt fa-fw me-3"></i><span>Main dashboard</span>
+        </a>
+       <!--  <a href="#" class="list-group-item list-group-item-action py-2 ripple active ">
+          <i class="fas fa-chart-area fa-fw me-3"></i><span>Webiste traffic</span>
+        </a> -->
+     
+        <a routerLink="/create-proyectos" class="list-group-item list-group-item-action py-2 ripple"
+          ><i class="fas fa-chart-line fa-fw me-3"></i><span>Crear Proyecto</span></a
+        >
+      
+       <!--  <a href="#" class="list-group-item list-group-item-action py-2 ripple"
+          ><i class="fas fa-chart-bar fa-fw me-3"></i><span>Orders</span></a
+        > -->
+      
+        <a routerLink="/list-materiales" class="list-group-item list-group-item-action py-2 ripple"
+          ><i class="fas fa-building fa-fw me-3"></i><span>Materiales</span></a
+        >
+       
+        <a routerLink="/list-trabajadores" class="list-group-item list-group-item-action py-2 ripple"
+          ><i class="fas fa-users fa-fw me-3"></i><span>Trabajadores</span></a
+        >
+        <a routerLink="/list-clientes" class="list-group-item list-group-item-action py-2 ripple"
+          ><i class="fas fa-money-bill fa-fw me-3"></i><span>Clientes</span></a
+        >
+      </div>
+    </div>
+  </nav>
+  <!-- Sidebar -->
+  <router-outlet></router-outlet>
+  <!-- Navbar -->
+  <nav id="main-navbar" class="navbar navbar-expand-lg navbar-light bg-primary fixed-top">
+    <!-- Container wrapper -->
+    <div class="container-fluid">
+      <!-- Toggle button -->
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-mdb-toggle="collapse"
+        data-mdb-target="#sidebarMenu"
+        aria-controls="sidebarMenu"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fas fa-bars"></i>
+      </button>
+
+      <!-- Brand -->
+      <a class="navbar-brand" routerLink="/">
+        <img
+          src="../assets/Adrian Ramirez-1.png"
+          height="25"
+          alt="MDB Logo"
+          loading="lazy"
+        />
+      </a>
+      <!-- Search form -->
+   
+
+      <!-- Right links -->
+      
+    </div>
+    <!-- Container wrapper -->
+  </nav>
