--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,20 +1,22 @@
 <div class="wrapper">
-    <div class="body">
+    <div *ngIf="!loading" class="body">
         <img class="logo" src="../../../assets/login.png" alt="login">
         <h1>Login</h1>
-        <form>
+        <form (ngSubmit)="login()" [formGroup]="loginUsuario">
         <div class="form-floating mb-3">
-            <input type="email" class="form-control"  placeholder="name@example.com">
+            <input type="email" class="form-control" formControlName="email" placeholder="name@example.com">
             <label >Email address</label>
           </div>
           <div class="form-floating mb-3">
-            <input type="password" class="form-control"  placeholder="Password">
+            <input type="password" class="form-control" formControlName="password" placeholder="Password">
             <label>Password</label>
           </div>
         <div class="d-grid gap-2 mb-3">
-            <button class="btn btn-primary btn-lg">Ingresar</button>
+            <button type="submit" class="btn btn-primary btn-lg">Ingresar</button>
         </div>
+
     <a routerLink="/recuperar-password">Recuperar contraseña</a>
     </form>
     </div>
+<app-spinner *ngIf="loading"></app-spinner> 
 </div>
