--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-primary">
+<!-- <nav class="navbar navbar-dark bg-primary">
   <a class="route_link" routerLink="/" >
   <span class="navbar-brand mb-0 h1">App Proyectos</span></a>
   <div class="text-center">
@@ -19,4 +19,4 @@
   
     </div>
   </div>
-</nav>
+</nav> -->
