--- a/src/app/components/trabajadores/list-trabajadores/list-trabajadores.component.html
+++ b/src/app/components/trabajadores/list-trabajadores/list-trabajadores.component.html
@@ -1,9 +1,10 @@
 <div class="container mt-4">
-    <div class="card">
+    <div class="card pt-4">
       <div class="card-body">
-        <span class="hr">Lista de Trabajadores</span>
+        <figure class="text-center">
+          <div class="mt-3"> <h1 class="display-6 text-primary">Lista de Trabajadores</h1></div></figure>
         <button
-          class="btn btn-primary btn-lg float-right"
+          class="btn btn-primary btn-lg float-end"
           routerLink="/create-trabajadores"
         >
           Agregar
@@ -17,6 +18,7 @@
               <th>Nombre</th>
               <th>Apellidos</th>
               <th>Cargo</th>
+              <th>Accion</th>
             </tr>
           </thead>
           <tbody>
