--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="position-sticky">
       <div class="list-group list-group-flush mx-3 mt-4">
         <a
-        routerLink="/dasboard"
+        routerLink="/dashboard"
           class="list-group-item list-group-item-action py-2 ripple"
           aria-current="true"
         >
