--- a/src/app/components/proyectos/create-proyectos/create-proyectos.component.html
+++ b/src/app/components/proyectos/create-proyectos/create-proyectos.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-5">
  
-    <form [formGroup]="form">
+    <form [formGroup]="form" (ngSubmit)="submitForm()">
        
         <div class="row form-group "><figure class="text-center">
             <div class="mt-3"> <h1 class="display-6 text-primary">Crear Proyecto</h1></div></figure>
@@ -39,7 +39,7 @@
             </div>
         </div>
 
-        <div *ngIf="totalP > 0" class="alert alert-success text-center">
+        <div *ngIf="totalP > 0 && clientSelect.value" class="alert alert-success text-center">
             Total Proyecto: <h5 class="fw-bold">{{totalP |currency}}</h5>
         </div>
 
@@ -56,7 +56,7 @@
                             <li class="list-group-item d-flex justify-content-between align-items-start">
                             <span class="fw-bold text-info">{{material.nombre}}</span>
                             <span class="text-muted fw-bold">{{material.precio | currency}}</span>
-                            <button (click)="addMaterial(material)" class="btn btn-primary float-end btn-sm">Add to
+                            <button (click)="addMaterial(material)" class="btn btn-primary float-end btn-sm" type="button">Add to
                                 cart</button></li>
                             </ul>
                     </div>
@@ -76,7 +76,7 @@
                             <span class="input-group-text text-info">Cant</span> 
                              <input type="number" class="form-control" formControlName="quantity_{{selected.id}}" [(ngModel)]="selected.quantity"></div>
                          <span> <button (click)="removeMaterial(selected)"
-                                class="btn btn-danger btn-sm ml-2 input-group float-end col">Remove</button></span> </li>
+                                class="btn btn-danger btn-sm ml-2 input-group float-end col">Remove</button></span></li>
                         </ul>
                     </div>
                     <div *ngIf="selectedMaterials.length > 0" class="alert alert-success text-center">
@@ -123,7 +123,7 @@
                       
                                 <div class="input-group col">  
                                     <span class="input-group-text text-info">Horas</span>  
-                                        <input class="col-3 form-control" formControlName="horas" type="number" placeholder="C/horas" 
+                                        <input class="col-3 form-control"  type="number" placeholder="C/horas" 
                                         [formControl]="selectedTrabajadores[i].form.get('horas')"
                                         (input)="updateSubtotal(selectedTrabajador)">
                                                                    
@@ -131,7 +131,7 @@
                                 </div>
                                 <div class="input-group col"> 
                                     <span class="input-group-text text-info">$/Hora</span>                                   
-                                    <input formControlName="precioHora" type="number" class="col-3 form-control"
+                                    <input  type="number" class="col-3 form-control"
                                         [formControl]="selectedTrabajadores[i].form.get('precioHora')"
                                         (input)="updateSubtotal(selectedTrabajador) " placeholder="$/hora">
                                 </div>
@@ -147,5 +147,11 @@
 
             </div>
         </div>
+        <div class="mt-3">
+           
+            <button type="submit" class="btn btn-success btn-lg">Agregar</button>
+            <button type="button" class="btn btn-danger btn-lg" (click)="limpiarForm()">Limpiar</button>
+        </div>
+       
     </form>
 </div>
