--- a/src/app/components/materiales/list-materiales/list-materiales.component.html
+++ b/src/app/components/materiales/list-materiales/list-materiales.component.html
@@ -29,12 +29,12 @@
 
             <td>
               <i
-                class="fas fa-edit fa-lg text-info mr-2"
+                class="fas fa-edit fa-lg text-info me-2"
                 [routerLink]="['/edit-material/', material.id]"
               ></i>
               <i
                 (click)="eliminarMateriales(material.id)"
-                class="fas fa-trash-alt fa-lg text-danger"
+                class="fas fa-trash-alt fa-lg text-danger ms-2"
               ></i>
             </td>
           </tr>
