--- a/src/app/components/proyectos/create-proyectos/create-proyectos.component.html
+++ b/src/app/components/proyectos/create-proyectos/create-proyectos.component.html
@@ -1,16 +1,20 @@
 <div class="container mt-5">
- 
+
     <form [formGroup]="form" (ngSubmit)="submitForm()">
-       
-        <div class="row form-group "><figure class="text-center">
-            <div class="mt-3"> <h1 class="display-6 text-primary">Crear Proyecto</h1></div></figure>
+
+        <div class="row form-group ">
+            <figure class="text-center">
+                <div class="mt-3">
+                    <h1 class="display-6 text-primary">Crear Proyecto</h1>
+                </div>
+            </figure>
             <div class="pt-4 col input-group mb-3">
                 <div class="input-group-prepend">
                     <label class="input-group-text" for="clientSelect">Cliente</label>
                 </div>
                 <select formControlName="clientSelect" class="form-control form-select" id="clientSelect" #clientSelect
-                    (change)="onSelected(clientSelect.value)">
-                    <option value="none" selected disabled>Select an Option</option>
+                    >
+                    <option value="" disabled>Select an Option</option>
                     <option *ngFor="let client of clients" [value]="client.id">
                         {{client.nombre}} {{client.apellidos}}
                     </option>
@@ -22,9 +26,9 @@
                 </div>
 
                 <select formControlName="clientType" class="form-control form-select" id="clientType">
-                    <option value="none" selected disabled>Select an Option</option>
-                    <option value="1"> Comercial</option>
-                    <option value="2"> Residencial</option>
+                    <option value="" disabled>Select an Option</option>
+                    <option value="Comercial"> Comercial</option>
+                    <option value="Residencial"> Residencial</option>
                 </select>
             </div>
             <div class="pt-4 col right-section input-group mb-3" *ngIf="clientSelect.value">
@@ -32,12 +36,27 @@
                     <label class="input-group-text" for="projecType">Tipo de proyecto</label>
                 </div>
                 <select formControlName="projecType" class="form-control form-select" id="clientType">
-                    <option value="none" selected disabled>Select an Option</option>
-                    <option value="1"> Nueva construccion</option>
-                    <option value="2"> Servicio</option>
+                    <option value="" disabled>Select an Option</option>
+                    <option value="Nueva construccion"> Nueva construccion</option>
+                    <option value="Servicio"> Servicio</option>
                 </select>
             </div>
         </div>
+        <div class="row">
+            <div class="col-md-6">
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="start-date">Fecha de inicio</span>
+                <input type="date" class="form-control" aria-label="start-date" aria-describedby="start-date" name="start-date" formControlName="startDate">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="input-group mb-3">
+                <span class="input-group-text" id="end-date">Fecha de fin</span>
+                <input type="date" class="form-control" aria-label="end-date" aria-describedby="end-date" name="end-date" formControlName="endDate">
+              </div>
+            </div>
+          </div>
+    
 
         <div *ngIf="totalP > 0 && clientSelect.value" class="alert alert-success text-center">
             Total Proyecto: <h5 class="fw-bold">{{totalP |currency}}</h5>
@@ -54,11 +73,13 @@
                     <div *ngFor="let material of materials">
                         <ul class="list-group">
                             <li class="list-group-item d-flex justify-content-between align-items-start">
-                            <span class="fw-bold text-info">{{material.nombre}}</span>
-                            <span class="text-muted fw-bold">{{material.precio | currency}}</span>
-                            <button (click)="addMaterial(material)" class="btn btn-primary float-end btn-sm" type="button">Add to
-                                cart</button></li>
-                            </ul>
+                                <span class="fw-bold text-info">{{material.nombre}}</span>
+                                <span class="text-muted fw-bold">{{material.precio | currency}}</span>
+                                <button (click)="addMaterial(material)" class="btn btn-primary float-end btn-sm"
+                                    type="button">Add to
+                                    cart</button>
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="col right-section">
@@ -70,21 +91,23 @@
                     <div *ngFor="let selected of selectedMaterials" class="card">
                         <ul class="list-group">
                             <li class="list-group-item d-flex  align-items-start ">
-                            <span class="fw-bold text-info input-group">{{selected.nombre}}</span>
-                            <span class="text-muted fw-bold input-group">{{selected.precio |currency}}</span>
-                            <div class="input-group input-group-sm mb-3">
-                            <span class="input-group-text text-info">Cant</span> 
-                             <input type="number" class="form-control" formControlName="quantity_{{selected.id}}" [(ngModel)]="selected.quantity"></div>
-                         <span> <button (click)="removeMaterial(selected)"
-                                class="btn btn-danger btn-sm ml-2 input-group float-end col">Remove</button></span></li>
+                                <span class="fw-bold text-info input-group">{{selected.nombre}}</span>
+                                <span class="text-muted fw-bold input-group">{{selected.precio |currency}}</span>
+                                <div class="input-group input-group-sm mb-3">
+                                    <span class="input-group-text text-info">Cant</span>
+                                    <input type="number" class="form-control" formControlName="quantity_{{selected.id}}"
+                                        [(ngModel)]="selected.quantity">
+                                </div>
+                                <span> <button (click)="removeMaterial(selected)"
+                                        class="btn btn-danger btn-sm ml-2 input-group float-end col">Remove</button></span>
+                            </li>
                         </ul>
                     </div>
                     <div *ngIf="selectedMaterials.length > 0" class="alert alert-success text-center">
-                        Sub-Total Price Materiales: <span class="fw-bold">{{updateTotal() |currency}}</span>
+                        Sub-Total Price Materiales: <span class="fw-bold">{{updateSubTotalMat() |currency}}</span>
                     </div>
                 </div>
             </div>
-
 
             <div class="row pt-5">
                 <div class="left-section col-6">
@@ -95,12 +118,13 @@
                     <div class="card" *ngIf="trabajadores.length > 0">
 
                         <div class="card-header text-center text-info fw-bold">
-                            Trabajadores disponibles <span class="badge rounded-pill bg-warning">{{trabajadores.length}}</span>
+                            Trabajadores disponibles <span
+                                class="badge rounded-pill bg-warning">{{trabajadores.length}}</span>
                         </div>
 
                         <ul class="list-group list-group-item" *ngFor="let trabajador of trabajadores">
                             <li class="list-group-item row-cols" (click)="selectTrabajador(trabajador)">
-                                <span class="card-title fw-bold">{{trabajador.nombre }} {{trabajador.apellidos }} 
+                                <span class="card-title fw-bold">{{trabajador.nombre }} {{trabajador.apellidos }}
                                     <i class="fas fa-plus-circle fa-lg text-info float-end"></i>
                                 </span>
                             </li>
@@ -108,35 +132,39 @@
                     </div>
                 </div>
 
-
                 <div class="col-6" *ngIf="selectedTrabajadores.length > 0">
                     <div class="card">
                         <div class="card-header text-center text-info fw-bold">
-                            Trabajadores seleccionados <span class="badge rounded-pill bg-success">{{selectedTrabajadores.length}}</span>
+                            Trabajadores seleccionados <span
+                                class="badge rounded-pill bg-success">{{selectedTrabajadores.length}}</span>
                         </div>
                         <div *ngFor="let selectedTrabajador of selectedTrabajadores; let i = index">
                             <ul class="list-group">
-                                <li class="list-group-item d-flex justify-content-between align-items-start">                             
-                                    <div class="input-group col fw-bold text-info" (click)="unselectTrabajador(selectedTrabajador)">
+                                <li class="list-group-item d-flex justify-content-between align-items-start">
+                                    <div class="input-group col fw-bold text-info"
+                                        (click)="unselectTrabajador(selectedTrabajador)">
                                         <span><i class="fas fa-minus-circle fa-lg text-danger m-2"></i></span>{{
-                                        selectedTrabajador.nombre }} {{selectedTrabajador.apellidos }}</div>
-                      
-                                <div class="input-group col">  
-                                    <span class="input-group-text text-info">Horas</span>  
-                                        <input class="col-3 form-control"  type="number" placeholder="C/horas" 
-                                        [formControl]="selectedTrabajadores[i].form.get('horas')"
-                                        (input)="updateSubtotal(selectedTrabajador)">
-                                                                   
-                                    
-                                </div>
-                                <div class="input-group col"> 
-                                    <span class="input-group-text text-info">$/Hora</span>                                   
-                                    <input  type="number" class="col-3 form-control"
-                                        [formControl]="selectedTrabajadores[i].form.get('precioHora')"
-                                        (input)="updateSubtotal(selectedTrabajador) " placeholder="$/hora">
-                                </div>
-                              
-                                <div class="input-group col fw-bold text-muted form-control">Subtotal: {{ selectedTrabajador.subtotal | currency}}</div></li>
+                                        selectedTrabajador.nombre }} {{selectedTrabajador.apellidos }}
+                                    </div>
+
+                                    <div class="input-group col">
+                                        <span class="input-group-text text-info">Horas</span>
+                                        <input class="col-3 form-control" type="number" placeholder="C/horas"
+                                            [formControl]="selectedTrabajadores[i].form.get('horas')"
+                                            (input)="updateSubtotal(selectedTrabajador)">
+
+
+                                    </div>
+                                    <div class="input-group col">
+                                        <span class="input-group-text text-info">$/Hora</span>
+                                        <input type="number" class="col-3 form-control"
+                                            [formControl]="selectedTrabajadores[i].form.get('precioHora')"
+                                            (input)="updateSubtotal(selectedTrabajador) " placeholder="$/hora">
+                                    </div>
+
+                                    <div class="input-group col fw-bold text-muted form-control">Subtotal: {{
+                                        selectedTrabajador.subtotal | currency}}</div>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -147,11 +175,11 @@
 
             </div>
         </div>
-        <div class="mt-3">
-           
-            <button type="submit" class="btn btn-success btn-lg">Agregar</button>
-            <button type="button" class="btn btn-danger btn-lg" (click)="limpiarForm()">Limpiar</button>
+        <div class="mt-3 d-grid gap-2 d-md-block" *ngIf="totalP > 0">
+
+            <button type="submit" class="btn btn-outline-success btn-lg me-md-2">Agregar</button>
+            <button type="button" class="btn btn-outline-danger btn-lg ml-2" (click)="limpiarForm()">Limpiar</button>
         </div>
-       
+
     </form>
 </div>
