--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,14 +25,16 @@
         > -->
       
         <a routerLink="/list-materiales" class="list-group-item list-group-item-action py-2 ripple"
-          ><i class="fas fa-building fa-fw me-3"></i><span>Materiales</span></a
+          ><i class="fas fa-warehouse fa-fw me-3"></i><span>Materiales</span></a
         >
        
         <a routerLink="/list-trabajadores" class="list-group-item list-group-item-action py-2 ripple"
-          ><i class="fas fa-users fa-fw me-3"></i><span>Trabajadores</span></a
+          ><i class="fas fa-truck-monster fa-fw me-3"></i><span>Trabajadores</span></a
         >
+   
+       
         <a routerLink="/list-clientes" class="list-group-item list-group-item-action py-2 ripple"
-          ><i class="fas fa-money-bill fa-fw me-3"></i><span>Clientes</span></a
+          ><i class="fas fa-handshake fa-fw me-3"></i><span>Clientes</span></a
         >
       </div>
     </div>
